corpus/c/type/case-11/snapshots/gcc15/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.c:9:19: error: type or overload mismatch
help: compare the expected type and actual argument at the call site
why: src/main.c:9:19: error: passing argument 1 of 'takes_int_ptr' from incompatible pointer type [-Wincompatible-pointer-types]
| src/main.c:9:19
|     takes_int_ptr(&box);
|                   ^
raw:
  src/main.c:9:19: error: passing argument 1 of 'takes_int_ptr' from incompatible pointer type [-Wincompatible-pointer-types]
other errors:
  - error: linker reported a failure
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output